# llmops-dashboard

./: .commitmsg  .dockerignore  .env.example  .gitignore  Dockerfile  HOWTO_and_TROUBLESHOOT.md  Makefile  README.dev.md  README.md  docker-compose.yaml  prometheus.yml  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: ci.yml
docker/: docker-compose.yaml  prometheus.yml
docs/: CONTRIBUTING.md  HOWTO_and_E2E_Testing.md
grafana/dashboards/: llmops_overview.json
grafana/provisioning/dashboards/: dashboards.yaml
llmops/: auth.py  database.py  main.py
llmops/mcp/: __init__.py  client_tracker.py  model_registry.py  usage_policy.py
llmops/routes/: llm_echo.py  llm_proxy.py  token_issuer.py
scripts/: reset_prometheus_data.sh  simulate_llm_traffic.sh  smoke_test.sh
src/: auth.py  database.py  main.py
src/routes/: llm_proxy.py  token_issuer.py
tests/: conftest.py
tests/e2e/: __init__.py  test_llm_echo.py  test_llm_flow.py  test_llm_traffic_simulation.py  test_metrics_exposure.py  test_smoke_flow.py
tests/unit/: test_database.py  test_mcp_policy.py  test_mcp_registry.py  test_mcp_tracker.py  test_reset_prometheus.py
